k8s/multi-region/namesapce.yaml
# Version A

apiVersion: v1
kind: Namespace
metadata:
  name: region-a


---

# Version B

apiVersion: v1
kind: Namespace 
metadata:
  name: region-b
