k8s/multi-region/deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx
  namespace: region-A
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
      - name: nginx
        image: nginx:1.21
        ports:
        - containerPort: 80
