k8s/multi-region/deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: region-b
spec:   
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      version: v2
  template:
    metadata:
      labels:
        app: nginx
        version: v2
    spec:
      containers:
      - name: nginx
        image: nginx:1.22
        ports:
        - containerPort: 80
