k8s/multi-region/service.yaml
#Service for region A 

apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: region-A 
spec:
  selector:
    app: nginx
    version: v1
  ports:
  - port: 80
    targetPort: 80


---
#Service for region B

apiVersion: v1
kind: Service   
metadata:
  name: nginx
  namespace: region-B
spec:
  selector:
    app: nginx
    version: v2
  ports:
  - port: 80
    targetPort: 80
